[tool.poetry]
name = "voice-recognition-systemv02"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "voice_recognition_systemv02"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pydub = "^0.25.1"
pyTelegramBotAPI = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
